# hir_syn_test

./: .gitignore  Cargo.toml
backup/librustc_driver/: pretty.rs
backup/librustc_session/: config.rs  options.rs
src/: main.rs
test_1/: Cargo.toml
test_1/src/: lib.rs
test_2/: Cargo.toml
test_2/src/: lib.rs
test_3/: Cargo.toml
test_3/src/: lib.rs
test_4_lint/: Cargo.toml
test_4_lint/src/: lib.rs
