[package]
name = "hir_syn_test"
version = "0.1.0"
authors = ["macpp <mac.map.void@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.85", features = ['derive'] }
serde_json = "1.0"
syn = {version = "1.0", features = ['visit', 'full', 'extra-traits']}